--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,25 @@
-@import url("https://rsms.me/inter/inter.css");
-
-html,
-body,
-#root {
-  position: relative;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  outline: none;
-  width: 100vm;
-  height: 100vh;
+nav {
+    display: flex;
+    justify-content: center;
 }
 
-body {
-  background: white;
-  display: flex;
-  justify-content: center;
+ul {
+    list-style: none;
+    text-align: center;
 }
 
-#root {
-  width: 120ch;
+ul li {
+    float: left;
+    text-align: center;
+    padding: 5px 10px;
+    font-size: large;
 }
 
-h1 {
-  position: absolute;
-  top: 43px;
-  left: 140px;
-  padding: 0;
-  margin: 40px;
-  font-size: 5em;
-  line-height: 0.7em;
-  letter-spacing: -6px;
-  color: #272730;
-}
+ul li a { text-decoration: none; }
 
-.picker {
-  position: absolute !important;
-  top: 74px;
-  left: 70px;
-  width: 90px !important;
-  height: 90px !important;
+h2 {
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 30px;
+    color:rgb(101, 3, 3);
 }
